# budget-app

./: .gitignore  DEPLOYMENT.md  Makefile  README.md  SETUP.md  alembic.ini  docker-compose.yml  package-lock.json  pyproject.toml  terraform.tfstate
.github/: SETUP.md
.github/workflows/: deploy.yml
alembic/versions/: 10ee0f8411a7_initial_migrations.py  29de248662be_add_brought_forward_and_update_carry_.py  b5e8cac07da1_rename_fields_to_transacted_at_and_.py  d67b070b9c01_make_period_end_date_nullable.py
app/: config.py  dependencies.py  main.py
app/auth/: dependencies.py  jwt.py
app/models/: __init__.py  budget_period.py  financial_goal.py  reference.py  transaction.py  user.py
app/schemas/: auth.py  budget_period.py  category.py  financial_goal.py  transaction.py  user.py
app/services/: analytics_service.py  auth_service.py  budget_service.py  category_service.py  (+3 more)
client/: Dockerfile  Dockerfile.dev  README.md  env.sh  index.html  package-lock.json  package.json  vite.config.js
iac/: MAKEFILE_COMMANDS.md  README.md  SUMMARY.md  outputs.tf
k8s/: README.md  backup-sealed-secrets-key.sh  create-secrets.sh  deploy.sh  fetch-cert.sh  seal-secrets.sh
scripts/: debug_alembic.py  init_database.py  reseal-secrets.sh  sample_data.py
server/: .dockerignore  Dockerfile  Makefile  alembic.ini  entrypoint.sh  init.sql  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 813f0b17389d_add_next_and_prev_periods_cols.py  c1a95150f01f_change_period_use_datetimes.py
server/app/: config.py  database.py  dependencies.py  main.py
server/app/api/v1/: analytics.py  auth.py  budget_periods.py  categories.py  currencies.py  financial_goals.py  transactions.py  users.py
server/app/auth/: dependencies.py  jwt.py  oauth.py
server/app/models/: __init__.py  budget_period.py  budget_period_models.py  category.py  recurring_transaction.py  user_models.py
server/app/schemas/: __init__.py  analytics.py  analytics_schemas.py  budget_period.py  budget_period_schemas.py  response_schemas.py  transaction.py  transaction_schemas.py  user_schemas.py
server/app/services/: analytics_service.py  auth_service.py  budget_service.py  category_service.py  financial_goal_service.py  transaction_service.py  user_service.py
server/app/utils/: redis.py  trading.py
server/scripts/: init_database.py  sample_data.py  test_oauth.py
server/tests/: test_auth.py
terraform/: .gitignore  CHECKLIST.md  SUMMARY.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
(+98 files in other folders)
