[project]
name = "budget-app"
version = "0.1.0"
description = "My Budgeting App"
authors = [{ name = "Jesse Egbosionu", email = "me@jesseinit.dev" }]
requires-python = "~=3.13.0"
# readme = "README.md"
dependencies = [
    "fastapi>=0.116.1,<0.117",
    "uvicorn[standard]>=0.35.0,<0.36",
    "asyncpg>=0.30.0,<0.31",
    "alembic>=1.16.4,<2",
    "pydantic[email]>=2.11.7,<3",
    "pydantic-settings>=2.10.1,<3",
    "python-jose[cryptography]>=3.5.0,<4",
    "passlib[bcrypt]>=1.7.4,<2",
    "python-multipart>=0.0.20,<0.0.21",
    "python-dateutil>=2.9.0.post0,<3",
    "httpx>=0.28.1,<0.29",
    "aiofiles>=24.1.0,<25",
    "pillow>=11.3.0,<12",
    "sqlalchemy[asyncio]>=2.0.41,<3",
    "authlib>=1.6.0,<2",
    "pyyaml>=6.0.2,<7",
    "redis[hiredis]>=6.2.0,<7",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "ruff>=0.12.3,<0.13",
    "debugpy>=1.8.15,<2",
]

[tool.black]
line-length = 120
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 120

[tool.ruff]
ignore = ["F401"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
